# Science

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Makefile  README.md  SCIENTIFIC_PRINCIPLES.md  pyproject.toml  run_web.py  test_mcp_server.py  verify_openai.py  verify_phase9.py  verify_supabase.py  verify_system.py
configs/: models_pluralism.example.json
reports/: claims_2401.00001.md  review_2401.00001_20260130_141859.md  review_2401.00001_20260130_142331.md  review_2401.00001_20260130_161643.md  review_2401.00001_20260130_161750.md  review_2401.00001_20260130_162157.md  summary_2401.00001.json
src/scientific_judgment_mcp/: __init__.py  feedback.py  publishability.py  reports.py  server.py
src/scientific_judgment_mcp/agents/: __init__.py  specifications.py
src/scientific_judgment_mcp/llm/: __init__.py  backends.py  config.py  prompts.py  runner.py
src/scientific_judgment_mcp/orchestration/: __init__.py  debate_protocol.py  state_machine.py
src/scientific_judgment_mcp/persistence/: __init__.py  jobs_repo.py  reviews_repo.py  supabase_client.py
src/scientific_judgment_mcp/tools/: __init__.py  arxiv.py  author_research.py
src/scientific_judgment_mcp/web/: __init__.py  app.py
src/scientific_judgment_mcp/web/static/: app.css
src/scientific_judgment_mcp/web/templates/: compare.html  feedback.html  index.html  job.html  message.html  paper_compare.html  paper_detail.html  paper_publishability.html  papers.html  review.html  review_detail.html  reviews.html
supabase/: schema.sql
