[project]
name = "scientific-judgment-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas Polliard", email = "Thomas.Polliard@jmfamily.com" }
]
requires-python = ">=3.14"
dependencies = [
    "arxiv>=2.4.0",
    "beautifulsoup4>=4.14.3",
    "certifi>=2025.1.31",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "supabase>=2.20.0",
    "truststore>=0.10.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
